tests/NormalTests/paczka1/fuzzy1/65496500.err
Error in line 6: OpXn7sbEbjw S360 41,9
Error in line 28: 5CeW0oJqAp S399 10,4
Error in line 26: LU9 S231 72,6
Error in line 38: LU9 S231 53,0
